{
    "name": "TouchControls",
    "maps": [
        {
            "name": "TouchPC",
            "id": "e7e75935-03ca-41e0-8bf6-87595c63f342",
            "actions": [
                {
                    "name": "TouchInput",
                    "type": "PassThrough",
                    "id": "3ab59a3c-95fd-4b35-8b1b-cfbf4645a780",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "TouchPress",
                    "type": "Button",
                    "id": "a2a923d5-ccc8-4e03-86ae-ccd22b85f716",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "TouchSelect",
                    "type": "Button",
                    "id": "65533521-e500-4e20-a4c1-440afb5702f2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "TouchPosition",
                    "type": "PassThrough",
                    "id": "5494e37a-3318-42be-8192-ad3e8b34fbaf",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MouseSelect",
                    "type": "Button",
                    "id": "058c80e4-e259-4a2d-a43c-491941e7e75e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MouseMove",
                    "type": "Button",
                    "id": "022aa71a-865f-4268-9fc5-c7c6c4cda4f7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SelectDog1",
                    "type": "Button",
                    "id": "cf45488a-e76a-4b7d-b734-7e70d4cd0f08",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SelectDog2",
                    "type": "Button",
                    "id": "d20a5e82-9380-4f7a-867e-6086413a12e6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MousePosition",
                    "type": "Button",
                    "id": "222c9e14-8886-4e11-99a3-673214dcc060",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "c13027a9-6c3c-40d3-a81a-572e40ebb4e8",
                    "path": "<Touchscreen>/primaryTouch",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchInput",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4c6f7b06-911d-499a-ae4d-f3e29993a661",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4d919e63-1974-4214-9cc0-8729def02acc",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5499d55b-560c-463a-9ee0-6b2a31833901",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseSelect",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "03c125b5-c731-4940-83cd-a4aebdb0fdf7",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectDog1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0b757274-3363-4a9b-86bb-531eaccb2d7c",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectDog2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7445939f-6092-42d9-94f0-9e2c1c70ba15",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "37b25110-2413-4317-aacc-b90c49e22399",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "74a53c79-96a8-4e3a-a20b-c20c511df812",
                    "path": "<Touchscreen>/primaryTouch/tap",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchSelect",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}